fix: padding instead of margin on statement block asset wrap

--- a/src/blocks/Statement/index.module.scss
+++ b/src/blocks/Statement/index.module.scss
@@ -53,11 +53,11 @@
 }
 
 .assetWrap {
-  margin-block: 4rem;
+  padding-block: 4rem;
   position: relative;
 
   @include mid-break {
-    margin-block: 2rem;
+    padding-block: 2rem;
   }
 }
 
